Sun Sep 03 04:03:31 2000  George Lebl <jirka@5z.com>

	* button-widget.c, rgb-stuff.[ch]:  Do scaling of buttons by using
	  gdk-pixbuf scaling functions and the hyperbolic scaling code since
	  libart doesn't support it yet.  This makes non-standard (48) sized
	  panels look way cooler.

Sat Sep 02 19:19:08 2000  George Lebl <jirka@5z.com>

	* distribution.[ch], menu*.c:  Make distribution menus api cache the
	  results to avoid continual statting of version files (how often
	  does a user change from one distro to another while keeping the
	  panel running?).  Fix some remaking function to use the correct
	  distribution_info and fix a crash when distribution menus got
	  turned on on an unknown distribution system

	* *.[ch]:  make type macros be more consistent in naming, all the
	  _get_type functions are G_GNUC_CONST functions now also the 
	  function to get default menu flags is G_GNUC_CONST

2000-08-29  Ismael Olea <olea@hispafuentes.com>

	* panel.hints: translation into Spanish

2000-08-24  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* panel.hints: fix format by removing excessive text.

Tue Aug 22 01:49:59 2000  George Lebl <jirka@5z.com>

	* applet-widget.c: const correct the factory thingie

	* main.c: minor estetic cleanup

	* menu_properties.c: fix warning

	* menu.c: fix bug with non-main menu rereading

	* session.c: when the global_main was read from default, try and see
	  if we can turn it on without any behaviour changes

Mon Aug 21 21:06:03 2000  George Lebl <jirka@5z.com>

	* menu-properties.c, menu.[ch], panel.c, session.c: Add a global_main
	  flag to main menus.  this will make it use the global main setup.
	  this is the default.  This is since it is more logical for the
	  main menu to use the setup from crapplet.

Wed Aug 16 23:43:44 2000 Pablo Saratxaga <pablo@mandrakesoft.com>

	* panel.hints: added Greek strings from Simos Xenitellis

Wed Aug 16 02:03:46 2000  George Lebl <jirka@5z.com>
