@@ -18,6 +18,7 @@
 #define HAVE_PANEL_PIXEL_SIZE 1
 #define HAVE_PANEL_DRAW_SIGNAL 1
 #define HAVE_APPLET_QUEUE_RESIZE 1
+#define HAVE_APPLET_SIZE_ULTRA_TINY_AND_RIDICULOUS 1
 
 BEGIN_GNOME_DECLS
 
@@ -28,11 +29,13 @@ typedef GNOME_Panel_OrientType PanelOrientType;
 #define ORIENT_RIGHT GNOME_Panel_ORIENT_RIGHT
 
 enum {
+	PIXEL_SIZE_ULTRA_TINY = 12,
 	PIXEL_SIZE_TINY = 24,
 	PIXEL_SIZE_SMALL = 36,
 	PIXEL_SIZE_STANDARD = 48,
 	PIXEL_SIZE_LARGE = 64,
-	PIXEL_SIZE_HUGE = 80
+	PIXEL_SIZE_HUGE = 80,
+	PIXEL_SIZE_RIDICULOUS = 128
 };
 
 typedef GNOME_Panel_BackType PanelBackType;
