@@ -119,11 +119,13 @@ enum {
 
 
 #define MENU_SIZES "sizes_menu"
+#define MENU_SIZE_ULTRA_TINY "size-ultra-tiny"
 #define MENU_SIZE_TINY "size-tiny"
 #define MENU_SIZE_SMALL "size-small"
 #define MENU_SIZE_STANDARD "size-standard"
 #define MENU_SIZE_LARGE "size-large"
 #define MENU_SIZE_HUGE "size-huge"
+#define MENU_SIZE_RIDICULOUS "size-ridiculous"
 
 #define MENU_BACKS "background_menu"
 #define MENU_BACK_NONE "back-none"
