@@ -1,3 +1,13 @@
+Sun Sep 03 04:41:28 2000  George Lebl <jirka@5z.com>
+
+	* applet-widget.h, basep-widget.c, menu.[ch], panel-types.h,
+	  panel-widget.h, panel_config.c, session.c, status.c:  Add
+	  "Ultra Tiny (12 pixels)" size which would be useful for PDA's
+	  or real screen real estate freaks and "Ridiculous (128 pixels)"
+	  which should be useful to people with bad vision I'd guess.  With
+	  the new icon scaling these sizes actually look quite good.  Minor
+	  cleanups and fixes as well.
+
 Sun Sep 03 04:03:31 2000  George Lebl <jirka@5z.com>
 
 	* button-widget.c, rgb-stuff.[ch]:  Do scaling of buttons by using
